# search-in-terminal

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Config.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: release.yml  rust.yml
docs/: API.md  CLI.md  CONFIG.md
src/: lib.rs  main.rs
src/core/: app.rs  config.rs
src/error/: types.rs
src/search/: engine.rs  mod.rs  models.rs
src/ui/: terminal.rs
