[package]
name = "search-in-terminal"
version = "0.1.1"
edition = "2021"
authors = ["zykowal"]
description = "A terminal-based search tool"
license = "MIT"
repository = "https://github.com/zykowal/search-in-terminal"
documentation = "https://docs.rs/search-in-terminal"
readme = "README.md"
keywords = ["search", "terminal", "cs"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "st"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.21"
open = "5.0"
urlencoding = "2.1"
once_cell = "1"
rand = "0.8"
thiserror = "2.0"
moka = { version = "0.12", features = ["future"] }
toml = "0.8"
dirs = "5.0"
